# thesisROS

./: .gitignore  README.md
panda_c++/src/thesis_franka/: CMakeLists.txt  package.xml
panda_c++/src/thesis_franka/src/: MotionPlanner.cpp  MotionPlanner.h  cartesian_impedance_control.cpp  cartesian_impedance_control_motionPlanner.cpp  cartesian_impedance_control_sub.cpp  echo_robot_state.cpp  examples_common.cpp  franka_controller_sub.cpp  generate_cartesian_pose_motion.cpp  joint_impedance_control.cpp  motion_with_control.cpp
panda_c++/src/thesis_franka/srv/: GripperData.srv
panda_python/: CMakeLists.txt
panda_python/devel/: .catkin  .rosinstall  setup.sh
panda_python/devel/include/thesis_realsense/: AddTwoInts.h  AddTwoIntsRequest.h  AddTwoIntsResponse.h  GripperData.h  GripperDataRequest.h  GripperDataResponse.h
panda_python/devel/lib/pkgconfig/: thesis_realsense.pc
panda_python/devel/lib/python2.7/dist-packages/thesis_realsense/srv/: _AddTwoInts.py  _GripperData.py  __init__.py
panda_python/devel/share/common-lisp/ros/thesis_realsense/srv/: AddTwoInts.lisp  GripperData.lisp  _package.lisp  _package_AddTwoInts.lisp  _package_GripperData.lisp  thesis_realsense-srv.asd
panda_python/devel/share/gennodejs/ros/thesis_realsense/srv/: AddTwoInts.js  GripperData.js  _index.js
panda_python/devel/share/roseus/ros/thesis_realsense/: manifest.l
panda_python/devel/share/roseus/ros/thesis_realsense/srv/: AddTwoInts.l  GripperData.l
panda_python/devel/share/thesis_realsense/cmake/: thesis_realsense-msg-extras.cmake  thesis_realsense-msg-paths.cmake  thesis_realsenseConfig.cmake
panda_python/src/: franka_motion_pub.py  image_set_creator.py  motion_planner.py  movegroupRobot.py  robot_node_ROS.py  test_SUB_PUB.py
panda_python/src/franka/: franka_control_ros.py
panda_python/src/recorded_joint_val/: recorded_joint_val0.txt  recorded_joint_val1.txt  recorded_joint_val2.txt  recorded_joint_val3.txt  recorded_joint_val4.txt
panda_python/src/thesis_realsense/: CMakeLists.txt  package.xml
panda_python/src/thesis_realsense/Untitled Folder/: CMakeLists.txt  package.xml
panda_python/src/thesis_realsense/Untitled Folder/scripts/: add_two_ints_client.py  add_two_ints_server.py  motion_planner.py  movegroupRobot.py  robot_node_ROS.py  vision_node_ROS_client.py
panda_python/src/thesis_realsense/Untitled Folder/srv/: GripperData.srv
panda_python/src/thesis_realsense/scripts/: image_set_creator.py  move_it_example.py  movegroupRobot.py  vision_node_ROS_client.py
panda_python/src/thesis_realsense/scripts/franka/: franka_control_ros.py
panda_python/src/thesis_realsense/scripts/recorded_joint_val/: recorded_joint_val0.txt
